Enumerate dynamic properties in CSSStyleDeclaration (Note: this includes the SVG properties as well...)

BUG:220627


svn path=/trunk/KDE/kdelibs/; revision=1067634